Manage MPD migration using Liquibase.