@@ -19,6 +19,8 @@
 		<!-- SOA Service BOM -->
 		<soa-service-bom.version>1.0.0-SNAPSHOT</soa-service-bom.version>
 		<thorntail.version>2.1.0.Final</thorntail.version>
+        <swagger.version>1.5.18</swagger.version>
+		<swagger.yaml.outputPath>${basedir}/target/generated/swagger/yaml</swagger.yaml.outputPath>
 		
 		<!-- Arquillian (copy from soa-bom maven project properties) -->
         <arquillian-graphene.version>2.3.2</arquillian-graphene.version>
@@ -183,35 +185,9 @@
                                 </pluginExecution>
                                 <pluginExecution>
                                     <pluginExecutionFilter>
-										<groupId>org.apache.cxf</groupId>
-										<artifactId>cxf-wadl2java-plugin</artifactId>
-                                        <versionRange>[${cxf-wadl2java-plugin.version},)</versionRange>
-                                        <goals>
-                                            <goal>wadl2java</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
 										<groupId>com.github.kongchen</groupId>
 										<artifactId>swagger-maven-plugin</artifactId>
                                         <versionRange>[${swagger-maven-plugin.version},)</versionRange>
-                                        <goals>
-                                            <goal>generate</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore />
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-										<groupId>io.swagger</groupId>
-										<artifactId>swagger-codegen-maven-plugin</artifactId>
-                                        <versionRange>[${swagger-codegen-maven-plugin.version},)</versionRange>
                                         <goals>
                                             <goal>generate</goal>
                                         </goals>
@@ -246,33 +222,6 @@
 						</dependency>
 					</dependencies>
 				</plugin>
-				<plugin>
-					<groupId>io.swagger</groupId>
-					<artifactId>swagger-codegen-maven-plugin</artifactId>
-					<version>${swagger-codegen-maven-plugin.version}</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>generate</goal>
-							</goals>
-							<configuration>
-								<!-- specify the swagger yaml -->
-								<inputSpec>swagger-2.yaml</inputSpec>
-	
-								<!-- target to generate java client code -->
-								<language>java</language>
-	
-								<!-- pass any necessary config options -->
-								<configOptions>
-									<dateLibrary>joda</dateLibrary>
-								</configOptions>
-	
-								<!-- override the default library to jersey2 -->
-								<!-- <library>jersey2</library> -->
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
 
 				<plugin>
 					<groupId>org.apache.cxf</groupId>
@@ -295,63 +244,6 @@
 						</execution>
 					</executions>
 				</plugin>
-
-				<plugin>
-					<groupId>org.apache.cxf</groupId>
-					<artifactId>cxf-wadl2java-plugin</artifactId>
-					<version>${cxf-wadl2java-plugin.version}</version>
-					<!-- <executions>
-						<execution>
-							<id>generate-sources</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>wadl2java</goal>
-							</goals>
-							<configuration>
-								<sourceRoot>${basedir}/target/generated/cxf/src/main/java</sourceRoot>
-								<wadlOptions>
-									<wadlOption>
-	                                   <wadlArtifact>
-	                                        <groupId>${project.groupId}</groupId>
-	                                        <artifactId>thorntail-deltaspike-service</artifactId>
-	                                        <version>${project.version}</version>
-	                                        <type>wadl</type>
-	                                    </wadlArtifact>
-	                                    <wadl>${basedir}/../service/target/generated/cxf/wadl/ISecurity.wadl</wadl>
-										<impl>true</impl>
-										<interface>true</interface>
-										<packagename>com.timm.demo.thorntail.deltaspike.client</packagename>
-										<schemaPackagenames>
-											<schemaPackagename>http://securite=com.timm.demo.thorntail.deltaspike.schema</schemaPackagename>
-										</schemaPackagenames>
-									</wadlOption>
-								</wadlOptions>
-							</configuration>
-						</execution>
-					</executions> -->
-				</plugin>
-				<!-- <plugin>
-					<groupId>org.apache.cxf</groupId>
-					<artifactId>cxf-codegen-plugin</artifactId>
-					<version>${cxf-codegen-plugin.version}</version>
-					<configuration>
-						<fork>once</fork>
-						<additionalJvmArgs>-Djava.endorsed.dirs=${project.build.directory}/endorsed</additionalJvmArgs>
-						rest of the normal codegen configuration options
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>com.sun.xml.bind</groupId>
-							<artifactId>jaxb-impl</artifactId>
-							<version>2.2.11</version>
-						</dependency>
-						<dependency>
-							<groupId>com.sun.xml.bind</groupId>
-							<artifactId>jaxb-xjc</artifactId>
-							<version>2.2.11</version>
-						</dependency>
-					</dependencies>
-				</plugin> -->
 				<plugin>
 					<groupId>io.fabric8</groupId>
 					<artifactId>fabric8-maven-plugin</artifactId>
